force-app/main/default/objects/sbaa__Approval__c/fields/Quote__c.field-meta.xml
<CustomField>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>AAE_Approvals</relationshipName>
        <type>Lookup</type>
    </CustomField>