force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__Actions__c.field-meta.xml
<CustomField>
        <fullName>sbaa__Actions__c</fullName>
        <formula>HYPERLINK( &quot;/apex/sbaa__Approve?id=&quot; &amp; Id, $Label.sbaa__lbl_approve, &quot;_self&quot;) + &quot; | &quot; + HYPERLINK( &quot;/apex/sbaa__Reject?id=&quot; &amp; Id, $Label.sbaa__lbl_reject, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actions</label>
        <type>Text</type>
    </CustomField>