force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__ApprovalChain__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ApprovalChain__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Approval Chain to which this Approval belongs</description>
        <inlineHelpText>Approval Chain to which this Approval belongs</inlineHelpText>
        <label>Approval Chain</label>
        <referenceTo>sbaa__ApprovalChain__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </CustomField>