force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__ApprovalStep__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ApprovalStep__c</fullName>
        <description>Step (level) at which this approval is required.</description>
        <inlineHelpText>Step (level) at which this approval is required.</inlineHelpText>
        <label>Approval Step</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>