force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__ApprovalTemplateId__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ApprovalTemplateId__c</fullName>
        <description>ID of the Email Template associated with Approval</description>
        <inlineHelpText>ID of the Email Template associated with Approval</inlineHelpText>
        <label>Approval Template Id</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>