force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__ApprovedBy__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who approved this Approval</description>
        <inlineHelpText>User who approved this Approval</inlineHelpText>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApprovedApprovals</relationshipName>
        <type>Lookup</type>
    </CustomField>