force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__Approver__c.field-meta.xml
<CustomField>
        <fullName>sbaa__Approver__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the Approver associated with this Approval.</description>
        <inlineHelpText>Lookup to the Approver associated with this Approval.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>sbaa__Approver__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </CustomField>