force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__Archived__c.field-meta.xml
<CustomField>
        <fullName>sbaa__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When Archived Approvals is enabled, indicates that this Approval is archived</description>
        <inlineHelpText>When Archived Approvals is enabled, indicates that this Approval is archived</inlineHelpText>
        <label>Archived</label>
        <type>Checkbox</type>
    </CustomField>