force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__AssignedGroupId__c.field-meta.xml
<CustomField>
        <fullName>sbaa__AssignedGroupId__c</fullName>
        <description>ID of the Group the Approval is assigned to, if applicable</description>
        <inlineHelpText>ID of the Group the Approval is assigned to, if applicable</inlineHelpText>
        <label>Assigned Group Id</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>