force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__AssignedTo__c.field-meta.xml
<CustomField>
        <fullName>sbaa__AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the User to which the Approval is assigned</description>
        <inlineHelpText>Lookup to the User to which the Approval is assigned</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </CustomField>