force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__AssignedToMe__c.field-meta.xml
<CustomField>
        <fullName>sbaa__AssignedToMe__c</fullName>
        <description>True if the current User is also the Assigned To User</description>
        <formula>sbaa__AssignedTo__r.Id = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if the current User is also the Assigned To User</inlineHelpText>
        <label>Assigned To Me</label>
        <type>Checkbox</type>
    </CustomField>