force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__CommentsLong__c.field-meta.xml
<CustomField>
        <fullName>sbaa__CommentsLong__c</fullName>
        <description>Approver&apos;s Comments</description>
        <inlineHelpText>Approver&apos;s Comments</inlineHelpText>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>