force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__DelegatedApprover__c.field-meta.xml
<CustomField>
        <fullName>sbaa__DelegatedApprover__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>If Delegated Approvals is enabled, lookup to the delegated Approver</description>
        <inlineHelpText>If Delegated Approvals is enabled, lookup to the delegated Approver</inlineHelpText>
        <label>Delegated Approver</label>
        <referenceTo>sbaa__Approver__c</referenceTo>
        <relationshipLabel>Delegated Approvals</relationshipLabel>
        <relationshipName>DelegatedApprovals</relationshipName>
        <type>Lookup</type>
    </CustomField>