force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__Opportunity__c.field-meta.xml
<CustomField>
        <fullName>sbaa__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity being approved</description>
        <inlineHelpText>Opportunity being approved</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </CustomField>