force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__RecallTemplateId__c.field-meta.xml
<CustomField>
        <fullName>sbaa__RecallTemplateId__c</fullName>
        <description>ID of the Email Template associated with Recalls</description>
        <inlineHelpText>ID of the Email Template associated with Recalls</inlineHelpText>
        <label>Recall Template Id</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>