force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__RecordField__c.field-meta.xml
<CustomField>
        <fullName>sbaa__RecordField__c</fullName>
        <description>API Name of the Approval field looking up to the record being approved</description>
        <inlineHelpText>API Name of the Approval field looking up to the record being approved</inlineHelpText>
        <label>Record Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>