force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__RejectedBy__c.field-meta.xml
<CustomField>
        <fullName>sbaa__RejectedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who rejected this Approval</description>
        <inlineHelpText>User who rejected this Approval</inlineHelpText>
        <label>Rejected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RejectedApprovals</relationshipName>
        <type>Lookup</type>
    </CustomField>