force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__RejectionTemplateId__c.field-meta.xml
<CustomField>
        <fullName>sbaa__RejectionTemplateId__c</fullName>
        <description>ID of the Email Template associated with Rejection</description>
        <inlineHelpText>ID of the Email Template associated with Rejection</inlineHelpText>
        <label>Rejection Template Id</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>