force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__RequestTemplateId__c.field-meta.xml
<CustomField>
        <fullName>sbaa__RequestTemplateId__c</fullName>
        <description>ID of the Email Template associated with Approval Requests</description>
        <inlineHelpText>ID of the Email Template associated with Approval Requests</inlineHelpText>
        <label>Request Template Id</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>