force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__Rule__c.field-meta.xml
<CustomField>
        <fullName>sbaa__Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval rule that generated this approval.</description>
        <inlineHelpText>Approval rule that generated this approval.</inlineHelpText>
        <label>Rule</label>
        <referenceTo>sbaa__ApprovalRule__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </CustomField>