force-app/main/default/objects/sbaa__Approval__c/fields/sbaa__Status__c.field-meta.xml
<CustomField>
        <fullName>sbaa__Status__c</fullName>
        <description>Status of this approval.</description>
        <inlineHelpText>Status of this approval.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                    <default>true</default>
                    <label>Assigned</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>