force-app/main/default/objects/sbaa__Approval__c/listViews/My_Pending_Approvals.listView-meta.xml
<ListView>
        <fullName>My_Pending_Approvals</fullName>
        <columns>NAME</columns>
        <columns>sbaa__Approver__c</columns>
        <columns>sbaa__AssignedTo__c</columns>
        <columns>sbaa__DelegatedApprover__c</columns>
        <columns>sbaa__AssignedToMe__c</columns>
        <columns>sbaa__Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>sbaa__Status__c</field>
            <operation>equals</operation>
            <value>Assigned,Requested</value>
        </filters>
        <label>My Pending Approvals</label>
        <language>en_US</language>
    </ListView>